# prf-analise-sinistros

./: README.md  pyproject.toml  settings.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task_generic.md  task_hypothesis.md
app/: main.py
dashboard/: app.py
docs/: h2_secao_sbc.md
docs/artigo/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  referencias.bib
docs/figures/: h2_resumo_periodos.csv  h2_testes_proporcao.csv
docs/geo/: brazil_states.geojson
labs/: 00_amostragem_e_preprocessamento.ipynb  00_eda_geral.ipynb  02-hipotese-h2.ipynb  05_hyphotesis_h5.ipynb  h4_validate.ipynb  lab_h1.ipynb  lab_h2.ipynb  lab_h3.ipynb  lab_h4.ipynb  lab_h5.ipynb  lab_modelagem.ipynb
scripts/: generate_figures.py  h4_validate.py  run_initial_analysis.py
src/analysis/: temporal.py
src/preprocessing/: __init__.py  cleaner.py  features.py  loader.py
src/prf_sdk/: schemas.py  settings.py
src/prf_sdk/analysis/: initial.py  spatial.py  temporal.py
src/prf_sdk/analysis/hypotheses/: h1.py  h2.py  h3.py  h4.py  h5.py
src/prf_sdk/models/: evaluate.py  predict.py  train.py
src/prf_sdk/preprocessing/: __init__.py  cleaner.py  features.py  loader.py  pipelines.py
src/prf_sdk/utils/: constants.py  plots.py  stats.py
tests/: test_h2_temporal_analysis.py  test_preprocessing_pipeline.py
