[project]
name = "prf-analise-sinistros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "holidays>=0.98",
  "imblearn>=0.0",
  "matplotlib>=3.10.9",
  "numpy>=2.4.6",
  "pandas>=3.0.3",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "scikit-learn>=1.8.0",
  "scipy>=1.17.1",
  "seaborn>=0.13.2",
  "statsmodels>=0.14.6",
  "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
  "docformatter>=1.7.8",
  "ipykernel>=7.2.0",
  "jupyter>=1.1.1",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "N", "F", "N", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
force-single-line = false

[tool.docformatter]
wrap-summaries = 88
wrap-descriptions = 88
recursive = true
